--- a/package.json
+++ b/package.json
@@ -3,6 +3,22 @@
     "@supabase/supabase-js": "^2.95.3",
     "dompurify": "^3.3.1",
     "jsdom": "^28.0.0",
-    "marked": "^17.0.1"
+    "marked": "^17.0.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^4.4.2",
+    "@netlify/functions": "^5.1.2",
+    "@types/node": "^25.2.1",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.17.1",
+    "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   }
 }
