--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@astrojs/netlify": "^6.6.4",
     "@supabase/supabase-js": "^2.95.3",
     "dompurify": "^3.3.1",
     "jsdom": "^28.0.0",
